--- a/doc/README
+++ b/doc/README
@@ -25,18 +25,13 @@ A rough guide:
                              Subversion site.  Think of it as a
                              temporary, but published, holding area.
 
-  design/                    Subversion's original design document.
-                             WARNING!  Extremely old!  From June 2000.
-                             Converted from the original texinfo into DocBook
-                             Lite, and *slowly* undergoing updates.
-
   programmer/                Documents for Subversion programmers.
 
   programmer/WritingChangeLogs.txt
                              A longer version of the info in
                              www/hacking.html.
 
-  user/                      Documents for Subversion users.
+  user/                      Subversion user documents.
 
   user/lj_article.txt        An introductory article from Linux Journal.
 
