Revert back part of r20005.
* doc/README
(user/): Revert back to original wording as per dlr's advice.

--- a/doc/README
+++ b/doc/README
@@ -31,7 +31,7 @@ A rough guide:
                              A longer version of the info in
                              www/hacking.html.
 
-  user/                      Subversion user documents.
+  user/                      Documents for Subversion users.
 
   user/lj_article.txt        An introductory article from Linux Journal.
 
