--- a/INSTALL
+++ b/INSTALL
@@ -575,55 +575,74 @@ II.   INSTALLATION
 
   E.1 Prerequisites
 
-      * Visual Studio 6 and service pack. It can be built with Visual Studio
-        7 (aka Visual Studio.NET aka Visual Studio.NET 2002) but these
-        instructions assume VS6.
-      * A recent Windows SDK, the one provided with Visual Studio 6 is
-        too old. You only need the 'Core SDK'. You can get it from MSDN
-        if you have it or from
+      * Visual Studio 6 and service pack. It can be built with later versions
+        of Visual Studio (Visual Studio.NET 2002, 2003, 2005 and Visual C++
+        Express 2005) but these instructions assume VS6.
+      * A recent Windows SDK if you are using Visual Studio 6.
+        You can get it from MSDN if you have it or from
         http://www.microsoft.com/msdownload/platformsdk/sdkupdate/ if you
         don't.
       * Python 2.2 or higher, downloaded from http://www.python.org/ which is
         used to generate the project files.
       * Perl 5.8 or higher from http://www.activestate.com/
-      * Awk, from http://cm.bell-labs.com/cm/cs/who/bwk/awk95.exe
-        This is needed to compile Apache or APR.  Note that this is the
-        actual awk program, not an installer - just rename it to awk.exe
-        and it is ready to use.
+      * Awk (from http://cm.bell-labs.com/cm/cs/who/bwk/awk95.exe) is
+        needed to compile Apache or APR.  Note that this is the actual awk
+        program, not an installer - just rename it to awk.exe and it is
+        ready to use.
       * Neon 0.24.7 or higher, downloaded from
         http://www.webdav.org/neon/neon-0.24.7.tar.gz which is required
         for building the client components.  Neon is included in the zip file
         distribution.
-      * Berkeley DB is required for support for local server components,
-        version 4.3.27 is available from
-        http://subversion.tigris.org/servlets/ProjectDocumentList as
-        db-4.3.27-win32.zip. For more information see Section I.5.
-      * Apache 2 source, downloaded from
-        http://httpd.apache.org/download.cgi, these instructions assume
-        version 2.0.54.  Only needed for building the server dso modules.
-      * Apache 2 msi install file, also from
-        http://httpd.apache.org/download.cgi (required for running the
-        tests).  Only needed for testing the server dso modules.
-      * Apache apr, apr-util, and apr-iconv libraries, version 0.9.5.
-        Included in both the Subversion ZIP file and the Apache 2 source
-        tarball.  If you are building from a Subversion checkout and have
-        not downloaded Apache 2, then get these 3 libraries from
-        http://www.apache.org/dist/apr/
-      * ZLib 1.2 or higher sources from http://www.zlib.org/
-      * Openssl 0.9.7f or higher obtained from
-        http://www.openssl.org/source/openssl-0.9.7f.tar.gz
-      * A modified version of GNU libintl, called svn-win32-libintl.zip,
-        for displaying localized messages. Available in
-        http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=2627
-      * GNU gettext for generating message catalog (.mo) files from
-        message translations. Get the latest binaries from
-        http://gnuwin32.sourceforge.net/. You'll need the binaries
-        (gettext-0.14.1-bin.zip) and dependencies (gettext-0.14.1-dep.zip).
+      * Apache apr, apr-util, and apr-iconv libraries, version 0.9.12.
+        Included in both the Subversion dependencies ZIP file and the
+        Apache 2.058 source zip.  If you are building from a Subversion
+        checkout and have not downloaded Apache 2, then get these 3
+        libraries from http://www.apache.org/dist/apr/.  Note that
+        the 1.x APR releases are not yet functional with Subversion --
+        see the note on '[Optional] Apache 2 source' below.
+      * ZLib 1.2 or higher is required and is included in the Subversion
+        dependencies zip file or can be obtained from http://www.zlib.org
       * Either a Subversion client binary from http://subversion.tigris.org/ to
         do the initial checkout of the Subversion source or the zip file
         source distribution. See the section "Bootstrapping from a Zip or
         Installer File under Windows" above for more.
       * A means of unpacking the files, e.g., WinZIP or similar.
+
+      Additional Options
+
+      * [Optional] Apache 2 source, downloaded from
+        http://httpd.apache.org/download.cgi, these instructions assume
+        version 2.0.58.  Only needed for building the server dso modules.
+        Note that although Subversion will compile against Apache 2.2.2
+        and APR 1.2.7, there is a bug that causes runtime failures with
+        Subversion on Windows.  It will hopefully be fixed in the
+        Apache 2.2.3 and APR 1.2.8 release.  The patch is available at:
+        http://www.mail-archive.com/dev@apr.apache.org/msg15242.html if
+        you want to patch and build APR yourself.
+      * [Optional] Apache 2 msi install file, also from
+        http://httpd.apache.org/download.cgi (required for running the
+        tests).  Only needed for testing the server dso modules and if
+        you are using Visual Studio 6.
+        Note that if you are not using Visual Studio 6 (and you want to
+        run and test the server modules) then you must rebuild Apache
+        from source -- do not use the stock MSI since mixing C runtime
+        libraries is not supported.
+      * [Optional] Berkeley DB for backend support of the server
+        components -- versions 4.3.27 and 4.4.20 are available from
+        http://subversion.tigris.org/servlets/ProjectDocumentList as
+        db-4.3.27-win32.zip and db-4.4.20-win32.zip.
+        For more information see Section I.5.
+      * [Optional] Openssl 0.9.7f or higher can be obtained from
+        http://www.openssl.org/source/openssl-0.9.7f.tar.gz
+      * [Optional] A modified version of GNU libintl, called
+        svn-win32-libintl.zip, can be used for displaying localized
+        messages. Available at:
+        http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=2627
+      * [Optional] GNU gettext for generating message catalog (.mo)
+        files from message translations. You can get the latest
+        binaries from http://gnuwin32.sourceforge.net/. You'll need the
+        binaries (gettext-0.14.1-bin.zip) and dependencies
+        (gettext-0.14.1-dep.zip).
       * [Optional] An assembler, e.g., MASM32 from http://www.mas32.com/
         or nasm which is available from
         http://www.kernel.org/pub/software/devel/nasm/binaries/win32/
@@ -631,8 +650,8 @@ II.   INSTALLATION
    E.2 Notes
 
       The Neon library supports secure connections with OpenSSL and
-      on-the-wire compression with zlib. If you want to use those
-      features, you should pass the options "--with-zlib" and
+      on-the-wire compression with zlib. If you want to use the
+      secure connections feature, you should pass the option
       "--with-openssl" to the gen-make.py script. See Section I.11 for
       more details.
 
@@ -663,10 +682,11 @@ II.   INSTALLATION
 
       * Install Visual Studio 6. You either have to tell the installer to
         register environment variables or run VCVARS32.BAT before building
-        anything.
-      * Install a recent Windows Core SDK
-      * Register the SDK with Visual Studio 6. This is a quote from the
-        Microsoft February 2003 SDK documentation:
+        anything.  If you are using a newer Visual Studio, use the
+        'Visual Studio 200x Command Prompt' on the Start menu.
+      * Install and register a recent Windows Core SDK if you are using
+        Visual Studio 6. This is a quote from the Microsoft February 2003
+        SDK documentation:
 
        "To register the SDK bin, include, and library directories with
         Microsoft Visual Studio® version 6.0 and Visual Studio .NET,
@@ -687,13 +707,16 @@ II.   INSTALLATION
       * Copy AWK (awk95.exe) to awk.exe (e.g. SVN\awk\awk.exe) and add
         the directory containing it (e.g. SVN\awk) to the path.
       * Install Apache 2 using the msi file if you are going to test the
-        server dso modules.
+        server dso modules and are using Visual Studio 6.  You must build
+        and install it from source if you are not using Visual Studio 6 and
+        want to build and/or test the server modules.
       * If you checked out Subversion from the repository then extract neon
         into SVN\src-trunk\neon, the zip file source distribution includes
         neon.
-      * Extract the Berkeley DB files into SVN\src-trunk\db4-win32. It's a
-        good idea to add SVN\src-trunk\db4-win32\bin to your PATH, so that
-        Subversion can find the Berkeley DB DLLs.
+      * If you want BDB backend support, extract the Berkeley DB files
+        into SVN\src-trunk\db4-win32. It's a good idea to add
+        SVN\src-trunk\db4-win32\bin to your PATH, so that Subversion can find
+        the Berkeley DB DLLs.
 
         [NOTE: This binary package of Berkeley DB is provided for
             convenience only. Please don't address questions about
@@ -701,13 +724,13 @@ II.   INSTALLATION
             to the project mailing list.]
 
         If you build Berkeley DB from the source, you will have to copy
-        the file db-4.3.27\build_win32\db.h to
+        the file db-x.x.x\build_win32\db.h to
         SVN\src-trunk\db4-win32\include, and all the import libraries to
         SVN\src-trunk\db4-win32\lib. Again, the DLLs should be somewhere in
         your path.
 
-      * Extract Apache source into SVN\httpd-2.0.54 if you wish to build the
-        server dso modules.
+      * If you want to build the server modules, extract Apache source into
+        SVN\httpd-2.x.x.
       * If you are building from a checkout of Subversion, and you are NOT
         building Apache, then you will need the APR libraries.  Depending
         on how you got your version of APR, either:
@@ -717,14 +740,14 @@ II.   INSTALLATION
           - Extract the apr, apr-util and apr-iconv directories from the
             srclib folder in the Apache httpd source into SVN\apr,
             SVN\apr-util, and SVN\apr-iconv respectively.
-      * Extract the ZLib sources into SVN\zlib.
-      * Extract openssl into SVN\openssl-0.9.7f
-      * Extract svn-win32-libintl.zip into SVN\svn-win32-libintl.
-        Add SVN\svn-win32-libintl\inc to your INCLUDE path and
-        SVN\svn-win32-libintl\lib to your LIB path environment variables.
-        You can add these on the command line as shown below.
-      * Extract gettext-0.14.1-bin.zip and gettext-0.14.1-dep.zip into
-        SVN\gettext-0.14.1-bin. Add SVN\gettext-0.14.1-bin\bin to your path.
+      * Extract the ZLib sources into SVN\zlib if you are not using the zlib
+        included in the dependencies zip file.
+      * If you want secure connection (https) client support, extract openssl
+        into SVN\openssl-x.x.x
+      * If you want localized message support, extract svn-win32-libintl.zip
+        into SVN\svn-win32-libintl and extract gettext-x.x.x-bin.zip and
+        gettext-x.x.x-dep.zip into SVN\gettext-x.x.x-bin.
+        Add SVN\gettext-x.x.x-bin\bin to your path.
       * [Optional] Extract MASM32 (only the ML.EXE and ML.ERR files) into
         SVN\asm (or extract nasm into SVN\asm) and put it in your path.
 
@@ -733,8 +756,8 @@ II.   INSTALLATION
     To build the binaries either follow the instructions here or use
     build\win32\vc6-build.bat.in after editing it's default paths to match
     yours and saving it as vc6-build.bat.  The vc6-build.bat does a full build
-    so it requires Apache 2 source and if the tests are to be run the
-    Apache 2 install.
+    using all options so it requires Apache 2 source and the other optional
+    components.
 
     Start in the SVN directory you created.
 
@@ -748,13 +771,11 @@ II.   INSTALLATION
     C:>set ASMDIR=C:\SVN\asm
     C:>set SDKINC=C:\Program Files\Microsoft SDK\include
     C:>set SDKLIB=C:\Program Files\Microsoft SDK\lib
-    C:>set LIBINTLINC=C:\SVN\svn-win32-libintl\inc
-    C:>set LIBINTLLIB=C:\SVN\svn-win32-libintl\lib
     C:>set GETTEXTBIN=C:\SVN\gettext-0.14.1-bin\bin
     C:>PATH=%PATH%;%DRIVE%:\SVN\src-%DIR%\db4-win32;%ASMDIR%;
             %PYTHONDIR%;%AWKDIR%;%GETTEXTBIN%
-    C:>set INCLUDE=%SDKINC%;%INCLUDE%;%LIBINTLINC%
-    C:>set LIB=%SDKLIB%;%LIB%;%LIBINTLLIB%
+    C:>set INCLUDE=%SDKINC%;%INCLUDE%
+    C:>set LIB=%SDKLIB%;%LIB%
 
     OpenSSL
 
@@ -777,12 +798,12 @@ II.   INSTALLATION
     Apache and Subversion will be running incompatible versions of apr.
 
     C:>cd src-%DIR%
-    C:>python gen-make.py -t dsp --with-httpd=..\httpd-2.0.54
+    C:>python gen-make.py -t dsp --with-httpd=..\httpd-2.0.58
        --with-berkeley-db=db4-win32 --with-openssl=..\openssl-0.9.7f
-       --with-zlib=..\zlib --enable-nls --enable-bdb-in-apr-util
+       --with-zlib=..\zlib --with-libintl=..\svn-win32-libintl
     C:>cd ..
     C:>set APACHEDIR=C:\Program Files\Apache Group\Apache2
-    C:>msdev httpd-2.0.54\apache.dsw /MAKE "BuildBin - Win32 Release"
+    C:>msdev httpd-2.0.58\apache.dsw /MAKE "BuildBin - Win32 Release"
 
     Subversion
 
@@ -794,9 +815,6 @@ II.   INSTALLATION
         apr files yourself you will have to tell the generator where to find
         the APR libraries; the options are --with-apr, --with-apr-util and
         --with-apr-iconv.
-      * You can skip setting the LIBINTLINC and LIBINTLLIB variables, and
-        add "--with-libintl=..\svn-win32-libintl" to the gen-make.py command
-        line instead.
       * If you would like a debug build substitute Debug for Release in
         the msdev commands.
       * There have been rumors that Subversion on Win32 can be built
@@ -811,15 +829,16 @@ II.   INSTALLATION
         directories must be in the Tools/Options/Directories settings (if you
         followed the 'Register the SDK with Visual Studio 6' instructions
         above this has been done for you).
-      * If you are using Visual Studio .NET change -t dsw into -t vcproj on
-        the gen-make.py command.  In this case you will also have to
-        distribute the C runtime dll with the binaries.  Also, since
-        Apache/APR do not provide .vcproj files, you will need to convert
-        the Apache/APR .dsp files to .vcproj files with Visual Studio.
-        Just open the Apache .dsw file and answer 'Yes To All' when the
-        conversion dialog pops up, or you can open the individual .dsp files
-        and convert them one at a time.  The Apache/APR projects required by
-        Subversion are: apr-util\libaprutil.dsp, apr\libapr.dsp,
+      * If you are using Visual Studio .NET change -t dsw into -t vcproj and
+        add the --vsnet-version=200x option on the gen-make.py command.
+        In this case you will also have to distribute the C runtime dll with
+        the binaries.  Also, since Apache/APR do not provide .vcproj files,
+        you will need to convert the Apache/APR .dsp files to .vcproj files
+        with Visual Studio before building -- just open the Apache .dsw file
+        and answer 'Yes To All' when the conversion dialog pops up, or you
+        can open the individual .dsp files and convert them one at a time.
+        The Apache/APR projects required by Subversion are:
+        apr-util\libaprutil.dsp, apr\libapr.dsp,
         apr-iconv\libapriconv.dsp, apr-util\xml\expat\lib\xml.dsp,
         apr-util\uri\gen_uri_delims.dsp (for APR 0.9.x),
         apr-iconv\ccs\libapriconv_ccs_modules.dsp, and
@@ -835,17 +854,21 @@ II.   INSTALLATION
 
     C:>python gen-make.py -t dsp --with-berkeley-db=db4-win32
         --with-openssl=..\openssl-0.9.7f --with-zlib=..\zlib
-        --enable-bdb-in-apr-util --with-libintl=..\svn-win32-libintl
+        --with-libintl=..\svn-win32-libintl
 
     Then build subversion:
 
     C:>msdev subversion_msvc.dsw /USEENV /MAKE "__ALL_TESTS__ - Win32 Release"
     C:>cd ..
 
-    Or, with Visual C++.NET:
+    Or, with Visual C++.NET 2002, 2003, 2005:
 
-    C:>devenv subversion_vcnet.sln /USEENV /build "Debug"
-        /project "__ALL_TESTS__"
+    C:>devenv subversion_vcnet.sln /build "Release" /project "__ALL_TESTS__"
+    C:>cd ..
+
+    Or, with Visual C++ Express 2005:
+
+    C:>msbuild subversion_vcnet.sln /t:__ALL_TESTS__ /p:Configuration=Release
     C:>cd ..
 
     The binaries have now been built.
